# TorsionField

./: .replit  README.md  app.py  data_loader.py  database.py  frame_dragging.py  gaia_directory.py  gaia_fetcher.py  galactic_dynamics.py  pyproject.toml  statistical_analysis.py  test_universal_frame_dragging.py  universal_rotation_redshift.py  utils.py  visualization.py
attached_assets/: Pasted--The-use-column-width-parameter-has-been-deprecated-and-will-be-removed-in-a-future-release-Ple-1747701210919.txt  Pasted--The-use-column-width-parameter-has-been-deprecated-and-will-be-removed-in-a-future-release-Please--1747699021794.txt  Pasted-import-numpy-as-np-import-matplotlib-pyplot-as-plt-import-pandas-as-pd-from-astropy-coordinates-impo-1747698475729.txt  Pasted-import-pandas-as-pd-import-numpy-as-np-import-gzip-from-pathlib-import-Path-def-load-local-gaia-fil-1747697823557.txt
